--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">technicalChallenge</string>
+    <string name="app_name">Technical Challenge</string>
+
+    <string name="search_text_hint">Buscar por nombre</string>
 </resources>
